--- a/LORA1262/MDK-ARM/LORA_1262f30_Receive/LORA_1262f30_Receive.build_log.htm
+++ b/LORA1262/MDK-ARM/LORA_1262f30_Receive/LORA_1262f30_Receive.build_log.htm
@@ -21,15 +21,15 @@ Target DLL:      Segger\JL2CM3.dll V2.99.43.0
 Dialog DLL:      TARMCM1.DLL V1.14.6.0
  
 <h2>Project:</h2>
-D:\nira\projects\LORA_SX1262\Code\LORA_1262f30\Receive\MDK-ARM\LORA_1262f30_Receive.uvprojx
-Project File Date:  02/08/2025
+D:\nira\self_training\github\Lora\LORA1262\LORA1262\MDK-ARM\LORA_1262f30_Receive.uvprojx
+Project File Date:  02/09/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Rebuild target 'LORA_1262f30_Receive'
 assembling startup_stm32g030xx.s...
-compiling stm32g0xx_it.c...
 compiling main.c...
+compiling stm32g0xx_it.c...
 compiling stm32g0xx_hal_msp.c...
 compiling stm32g0xx_hal_spi_ex.c...
 compiling stm32g0xx_hal_spi.c...
